[gd_scene load_steps=2 format=3 uid="uid://vfafvw2bl1pr"]

[ext_resource type="Script" path="res://Game/PauseOptions.gd" id="1_xcfk0"]

[node name="PauseSettings" type="VBoxContainer"]
process_mode = 3
anchors_preset = -1
anchor_top = -0.039
anchor_bottom = -0.039
offset_left = -520.0
offset_top = -353.84
offset_right = -370.0
offset_bottom = -252.84
grow_vertical = 2
scale = Vector2(7, 7)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_xcfk0")

[node name="Volume" type="Button" parent="."]
layout_mode = 2
text = "Volume
"

[node name="Controls" type="Button" parent="."]
layout_mode = 2
text = "Controls
"

[node name="Back" type="Button" parent="."]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
